--- a/newtemp.html
+++ b/newtemp.html
@@ -1,2 +1,3 @@
 <h1>Temporary HTML File</h1>
 <p>This is a temporaray HTML file, created to practice git commands</p>
+<p>After practicing git command this file will be deleted</p>
