add new heading

--- a/newtemp.html
+++ b/newtemp.html
@@ -3,3 +3,5 @@
 <p>After practicing git command this file will be deleted</p>
 <p>Feature2 - will make your experience smooth</p>
 <p>New Line added in trunk branch</p>
+<hr>
+<h2>New Heading</h2>
